code/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&family=Roboto:wght@400;500&display=swap');

body {
  margin: 0;
  font-family: 'Roboto', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

body > div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.loader {
  border: 10px solid white;
  border-top: 10px solid pink;
  border-bottom: 10px solid pink;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  margin-top: 50px;
  animation: spin 1.5s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

form,
.thought {
  width: 80%;
  max-width: 400px;
  border: 1px solid black;
  box-shadow: 8px 8px 0 black;
  margin: 10px;
  padding: 20px;
}

.thought:last-of-type {
  margin-bottom: 60px;
}

form {
  background-color: rgb(240, 240, 240);
  display: flex;
  flex-direction: column;
}

form label {
  font-weight: 500;
}

form input {
  font-family: 'Roboto Mono', monospace;
  font-weight: 500;
  margin-top: 15px;
  padding: 10px 10px 30px;
  overflow-wrap: break-word;
  line-break: loose;
}

.username-label {
  font-size: 16px;
  font-weight: 200;
  margin-top: 15px;
}

.username-input {
  padding: 10px;
}

.red {
  color: red;
}

form button {
  width: 50%;
  min-width: 200px;
  border: none;
  border-radius: 20px;
  padding: 10px;
  margin-top: 15px;
  background-color: pink;
  font-family: 'Roboto', sans-serif;
  font-size: 14px;
  font-weight: 500;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

form button:hover {
  transform: scale(1.1);
}

form p {
  font-size: 14px;
  padding: 5px 0 0 5px;
}

p {
  margin: 0;
}

.thought-message {
  font-family: 'Roboto Mono', monospace;
  font-weight: 500;
  overflow-wrap: break-word;
}

.thought-time {
  color: rgb(180, 180, 180);
}

.hearts-and-time-container {
  margin-top: 30px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.hearts {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border: none;
  margin-right: 10px;
  background-color: rgb(235, 235, 235);
}

.hearts-container span {
  color: rgb(180, 180, 180);
}

.hearts:hover {
  transform: scale(1.2);
  background-color: pink;
}

.hearts:disabled {
  background-color: pink;
  color: black;
}

.hearts:disabled:hover {
  transform: none;
}

.like-counter {
  width: 100%;
  border-top: 1px solid black;
  background-color: rgb(235, 235, 235);
  padding: 10px 0;
  text-align: center;
  position: fixed;
  bottom: 0;
}

.like-counter span {
  margin: 0 5px;
}

@media (min-width: 667px) {
  form,
  .thought {
    margin: 20px;
  }

  .like-counter {
    max-width: 480px;
    padding-right: 8px;
    border: 1px solid black;
    border-bottom: none;
  }
}

